--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "NODE_ENV=production node server/index.js"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -13,9 +14,14 @@
     "morgan": "^1.9.1",
     "next": "^8.0.3",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.86.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "nodemon": "^1.18.10",
+    "url-loader": "^1.1.2"
   }
 }
