--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+ build output
+dist
+.next
+
+# dependencies
 node_modules
+package-lock.json
+yarn.lock
+!/yarn.lock
+test/node_modules
+
+# logs & pids
+*.log
+pids
+
+# coverage
+.nyc_output
+coverage
+
+# test output
+test/**/out
+
+# Editors
+**/.idea
