--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "name": "create-next-example-app",
-  "scripts": {
-    "dev": "nodemon server/index.js",
-    "build": "next build",
-    "start": "NODE_ENV=production node server/index.js"
-  },
-  "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongoose": "^5.4.19",
-    "morgan": "^1.9.1",
-    "next": "^8.0.3",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
-  },
-  "devDependencies": {
-    "css-loader": "^1.0.1",
-    "file-loader": "^3.0.1",
-    "nodemon": "^1.18.10",
-    "url-loader": "^1.1.2"
-  }
+    "name": "create-next-example-app",
+    "scripts": {
+        "dev": "nodemon server/index.js",
+        "build": "next build",
+        "start": "NODE_ENV=production node server/index.js"
+    },
+    "dependencies": {
+        "@zeit/next-css": "^1.0.1",
+        "bcrypt": "^3.0.5",
+        "body-parser": "^1.18.3",
+        "cors": "^2.8.5",
+        "email-validator": "^2.0.4",
+        "express": "^4.16.4",
+        "mongoose": "^5.4.19",
+        "morgan": "^1.9.1",
+        "next": "^8.0.3",
+        "react": "^16.8.4",
+        "react-dom": "^16.8.4",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^0.86.0"
+    },
+    "devDependencies": {
+        "babel-eslint": "^10.0.1",
+        "css-loader": "^1.0.1",
+        "eslint": "^5.6.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-prettier": "^4.1.0",
+        "eslint-config-react-app": "^3.0.8",
+        "eslint-plugin-flowtype": "^2.50.3",
+        "eslint-plugin-import": "^2.16.0",
+        "eslint-plugin-jsx-a11y": "^6.2.1",
+        "eslint-plugin-prettier": "^3.0.1",
+        "eslint-plugin-react": "^7.12.4",
+        "file-loader": "^3.0.1",
+        "nodemon": "^1.18.10",
+        "prettier": "^1.16.4",
+        "url-loader": "^1.1.2"
+    }
 }
