--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
         "@zeit/next-css": "^1.0.1",
         "bcrypt": "^3.0.5",
         "body-parser": "^1.18.3",
+        "connect-mongo": "^2.0.3",
+        "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "email-validator": "^2.0.4",
         "express": "^4.16.4",
+        "express-session": "^1.15.6",
+        "http-status-codes": "^1.3.2",
         "mongoose": "^5.4.19",
         "morgan": "^1.9.1",
         "next": "^8.0.3",
+        "next-authentication": "^0.1.1",
+        "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
         "semantic-ui-css": "^2.4.1",
