--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
+        "react-transition-group": "^2.9.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.86.0"
     },
