--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "create-next-example-app",
+    "name": "hillfinder",
     "scripts": {
         "dev": "nodemon server/index.js",
         "build": "next build",
@@ -20,6 +20,7 @@
         "morgan": "^1.9.1",
         "next": "^8.0.3",
         "next-authentication": "^0.1.1",
+        "next-page-transitions": "^1.0.0-beta.2",
         "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
@@ -42,6 +43,8 @@
         "file-loader": "^3.0.1",
         "nodemon": "^1.18.10",
         "prettier": "^1.16.4",
-        "url-loader": "^1.1.2"
+        "style-loader": "^0.23.1",
+        "url-loader": "^1.1.2",
+        "webpack": "^4.29.6"
     }
 }
