dotenv and mongoose now part of project

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
         "connect-mongo": "^2.0.3",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
+        "dotenv": "^8.0.0",
         "email-validator": "^2.0.4",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
         "http-status-codes": "^1.3.2",
-        "mongoose": "^5.4.19",
+        "mongoose": "^5.6.6",
         "morgan": "^1.9.1",
         "next": "^8.0.3",
         "next-authentication": "^0.1.1",
