--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "email-validator": "^2.0.4",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
+        "express-validator": "^6.1.1",
         "http-status-codes": "^1.3.2",
         "mongoose": "^5.6.6",
         "morgan": "^1.9.1",
