--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "^7.12.4",
+        "eslint-plugin-react-hooks": "^2.0.1",
         "file-loader": "^3.0.1",
         "nodemon": "^1.19.1",
         "prettier": "^1.16.4",
