trying out redux for hillfinder

--- a/package.json
+++ b/package.json
@@ -24,13 +24,19 @@
         "next": "^8.0.3",
         "next-authentication": "^0.1.1",
         "next-page-transitions": "^1.0.0-beta.2",
+        "next-redux-wrapper": "^3.0.0",
         "node-sass": "^4.12.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
+        "react-redux": "^7.1.1",
+        "react-thunk": "^1.0.0",
         "react-transition-group": "^2.9.0",
+        "redux": "^4.0.4",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-logger": "^3.0.6",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.86.0"
     },
