--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "connect-mongo": "^2.0.3",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
+        "dom": "0.0.3",
         "dotenv": "^8.0.0",
         "email-validator": "^2.0.4",
         "express": "^4.16.4",
@@ -21,7 +22,7 @@
         "http-status-codes": "^1.3.2",
         "mongoose": "^5.6.6",
         "morgan": "^1.9.1",
-        "next": "^8.0.3",
+        "next": "^9.0.5",
         "next-authentication": "^0.1.1",
         "next-page-transitions": "^1.0.0-beta.2",
         "next-redux-wrapper": "^3.0.0",
@@ -29,14 +30,13 @@
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
-        "react": "^16.8.4",
-        "react-dom": "^16.8.4",
-        "react-redux": "^7.1.1",
-        "react-thunk": "^1.0.0",
+        "react": "^16.9.0",
+        "react-redux": "^5.0.6",
         "react-transition-group": "^2.9.0",
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.86.0"
     },
@@ -56,6 +56,7 @@
         "file-loader": "^3.0.1",
         "nodemon": "^1.19.1",
         "prettier": "^1.16.4",
+        "react-dom": "^16.9.0",
         "style-loader": "^0.23.1",
         "url-loader": "^1.1.2",
         "webpack": "^4.29.6"
