--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.86.0"
