--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "prop-types": "^15.7.2",
         "react": "^16.9.0",
         "react-redux": "^5.0.6",
+        "react-router": "^5.1.2",
+        "react-router-dom": "^5.1.2",
         "react-transition-group": "^2.9.0",
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
