--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "http-status-codes": "^1.3.2",
         "mongoose": "^5.7.5",
         "morgan": "^1.9.1",
+        "multer": "^1.4.2",
+        "multiparty": "^4.2.1",
         "next": "^9.0.5",
         "next-authentication": "^0.1.1",
         "next-page-transitions": "^1.0.0-beta.2",
@@ -55,7 +57,7 @@
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "^7.12.4",
-        "eslint-plugin-react-hooks": "^2.0.1",
+        "eslint-plugin-react-hooks": "^2.3.0",
         "file-loader": "^3.0.1",
         "nodemon": "^1.19.1",
         "prettier": "^1.16.4",
