--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
+        "axios": "^0.19.0",
         "bcrypt": "^3.0.5",
         "body-parser": "^1.18.3",
         "connect-mongo": "^2.0.3",
