--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.9.0",
+        "react-native-listener": "^1.1.0",
         "react-redux": "^5.0.6",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
