--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "scripts": {
         "dev": "nodemon server/index.js",
         "build": "next build",
-        "start": "NODE_ENV=production node server/index.js"
+        "start": "NODE_ENV=development node server/index.js"
     },
     "dependencies": {
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
         "axios": "^0.19.0",
-        "bcrypt": "^3.0.5",
+        "bcrypt": "^3.0.8",
         "body-parser": "^1.18.3",
         "connect-mongo": "^2.0.3",
         "cookie-parser": "^1.4.4",
@@ -25,11 +25,13 @@
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
         "multiparty": "^4.2.1",
-        "next": "^9.0.5",
+        "next": "^9.2.1",
         "next-authentication": "^0.1.1",
         "next-page-transitions": "^1.0.0-beta.2",
         "next-redux-wrapper": "^3.0.0",
-        "node-sass": "^4.12.0",
+        "next-server": "^9.0.5",
+        "node-sass": "^4.13.1",
+        "nodemailer": "^6.4.2",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
