--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express-session": "^1.15.6",
         "express-validator": "^6.1.1",
         "http-status-codes": "^1.3.2",
+        "indicative": "^7.4.4",
         "mongoose": "^5.7.5",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
