included some ignore rules for next

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ build/Release
 node_modules/
 jspm_packages/
 
+#next dependencies
+.next/
+*.log
+
 # TypeScript v1 declaration files
 typings/
 
