--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "babel-plugin-transform-class-properties": "^6.24.1",
         "bcrypt": "^3.0.8",
         "body-parser": "^1.18.3",
+        "compression": "^1.7.4",
         "connect-mongo": "^2.0.3",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
@@ -20,13 +21,15 @@
         "email-validator": "^2.0.4",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
-        "express-validator": "^6.1.1",
+        "helmet": "^3.22.0",
+        "http-proxy-middleware": "^1.0.3",
         "http-status-codes": "^1.3.2",
         "indicative": "^7.4.4",
         "mongoose": "^5.7.5",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
         "multiparty": "^4.2.1",
+        "newrelic": "^6.6.0",
         "next": "^9.2.1",
         "next-authentication": "^0.1.1",
         "next-page-transitions": "^1.0.0-beta.2",
