--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "scripts": {
         "dev": "nodemon server/index.js",
         "build": "next build",
-        "start": "next start"
+        "prod_start": "NODE_ENV=production node server/index.js",
+        "export": "next export"
     },
     "dependencies": {
         "@zeit/next-css": "^1.0.1",
