--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "hillfinder",
     "scripts": {
-        "dev": "nodemon server/index.js",
+        "dev": "NODE_ENV=development nodemon server/index.js",
         "build": "next build",
-        "start": "NODE_ENV=development node server/index.js"
+        "start": "next start -p $PORT",
+        "heroku-postbuild": "npm run build"
     },
     "dependencies": {
         "@zeit/next-css": "^1.0.1",
@@ -37,6 +38,7 @@
         "next-server": "^9.0.5",
         "node-sass": "^4.13.1",
         "nodemailer": "^6.4.2",
+        "nodemailer-mailgun-transport": "^2.0.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
@@ -74,5 +76,8 @@
         "style-loader": "^0.23.1",
         "url-loader": "^1.1.2",
         "webpack": "^4.29.6"
+    },
+    "engines": {
+        "node": "11.15.0"
     }
 }
