--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "http-proxy-middleware": "^1.0.3",
         "http-status-codes": "^1.3.2",
         "indicative": "^7.4.4",
+        "leaflet": "^1.6.0",
         "mongoose": "^5.7.5",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
@@ -43,6 +44,7 @@
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.9.0",
+        "react-leaflet": "^2.7.0",
         "react-native-listener": "^1.1.0",
         "react-redux": "^5.0.6",
         "react-router": "^5.1.2",
