--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "http-status-codes": "^1.3.2",
         "indicative": "^7.4.4",
         "leaflet": "^1.6.0",
+        "leaflet.locatecontrol": "^0.72.0",
         "mongoose": "^5.7.5",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
