--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
         "email-validator": "^2.0.4",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
+        "font-awesome": "^4.7.0",
         "helmet": "^3.22.0",
         "http-proxy-middleware": "^1.0.3",
         "http-status-codes": "^1.3.2",
         "indicative": "^7.4.4",
         "leaflet": "^1.6.0",
         "leaflet.locatecontrol": "^0.72.0",
+        "mapbox-gl": "^1.10.0",
+        "mapbox-gl-leaflet": "0.0.12",
         "mongoose": "^5.7.5",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
