--- a/package.json
+++ b/package.json
@@ -36,14 +36,18 @@
         "multer": "^1.4.2",
         "multiparty": "^4.2.1",
         "newrelic": "^6.6.0",
-        "next": "^9.2.1",
-        "next-authentication": "^0.1.1",
-        "next-page-transitions": "^1.0.0-beta.2",
+        "next": "^9.4.0",
+        "next-compose-plugins": "^2.2.0",
+        "next-images": "^1.4.0",
+        "next-offline": "^5.0.2",
+        "next-optimized-images": "^2.6.0",
+        "next-purgecss": "^4.0.0",
         "next-redux-wrapper": "^3.0.0",
         "next-server": "^9.0.5",
-        "node-sass": "^4.13.1",
+        "node-sass": "^4.14.1",
         "nodemailer": "^6.4.2",
         "nodemailer-mailgun-transport": "^2.0.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
@@ -60,7 +64,10 @@
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.86.0"
+        "semantic-ui-react": "^0.86.0",
+        "session-file-store": "^1.4.0",
+        "sharp": "^0.25.3",
+        "uuid": "^8.0.0"
     },
     "devDependencies": {
         "babel-eslint": "^10.0.1",
