--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
         "heroku-postbuild": "npm run build"
     },
     "dependencies": {
+        "@manaflair/redux-batch": "^1.0.0",
+        "@reduxjs/toolkit": "^1.3.6",
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
+        "@zeit/next-source-maps": "0.0.3",
         "axios": "^0.19.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "bcrypt": "^3.0.8",
@@ -23,8 +26,8 @@
         "express": "^4.16.4",
         "express-session": "^1.15.6",
         "font-awesome": "^4.7.0",
+        "global": "^4.4.0",
         "helmet": "^3.22.0",
-        "http-proxy-middleware": "^1.0.3",
         "http-status-codes": "^1.3.2",
         "indicative": "^7.4.4",
         "leaflet": "^1.6.0",
@@ -36,7 +39,7 @@
         "multer": "^1.4.2",
         "multiparty": "^4.2.1",
         "newrelic": "^6.6.0",
-        "next": "^9.4.0",
+        "next": "^9.1.7",
         "next-compose-plugins": "^2.2.0",
         "next-images": "^1.4.0",
         "next-offline": "^5.0.2",
@@ -54,11 +57,12 @@
         "react": "^16.9.0",
         "react-leaflet": "^2.7.0",
         "react-native-listener": "^1.1.0",
-        "react-redux": "^5.0.6",
+        "react-redux": "^5.1.2",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-transition-group": "^2.9.0",
         "redux": "^4.0.4",
+        "redux-batch": "0.0.0",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
@@ -77,7 +81,7 @@
         "eslint-config-prettier": "^4.1.0",
         "eslint-config-react-app": "^3.0.8",
         "eslint-plugin-flowtype": "^2.50.3",
-        "eslint-plugin-import": "^2.16.0",
+        "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "^7.12.4",
