--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,55 +1,48 @@
 {
-
-    "parser": "babel-eslint",
-    "parserOptions": {
-        "ecmaVersion": 7,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true,
-            "modules": true
-        }
-    },
-    "env": {
-        "browser": true,
-        "jest/globals": true,
-        "cypress/globals": true
-    },
-    "globals": {
-        "fetch": true
-    },
-    "plugins": [
-        "jest",
-        "cypress",
-        "react-hooks"
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 7,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    }
+  },
+  "env": {
+    "browser": true,
+    "jest/globals": true,
+    "cypress/globals": true
+  },
+  "globals": {
+    "fetch": true
+  },
+  "plugins": ["jest", "cypress", "react-hooks", "import"],
+  "extends": [
+    "airbnb",
+    "prettier",
+    "plugin:jest/recommended",
+    "plugin:cypress/recommended"
+  ],
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "react/jsx-boolean-value": 0,
+    "react/prop-types": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js"]
+      }
     ],
-    "extends": [
-        "airbnb",
-        "prettier",
-        "plugin:jest/recommended",
-        "plugin:cypress/recommended"
-    ],
-    "rules": {
-        "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn",
-        "react/jsx-boolean-value": 0,
-        "react/prop-types": "off",
-        "react/jsx-filename-extension": [
-            1,
-            {
-                "extensions": [
-                    ".js"
-                ]
-            }
-        ],
-        "jsx-a11y/label-has-for": "off",
-        "jsx-a11y/label-has-associated-control": "off"
-    },
-    "space-before-function-paren": [
-        "error",
-        {
-            "anonymous": "always",
-            "named": "always",
-            "asyncArrow": "always"
-        }
-    ]
+    "jsx-a11y/label-has-for": "off",
+    "jsx-a11y/label-has-associated-control": "off"
+  },
+  "space-before-function-paren": [
+    "error",
+    {
+      "anonymous": "always",
+      "named": "always",
+      "asyncArrow": "always"
+    }
+  ]
 }
