--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "node-sass": "^4.14.1",
         "nodemailer": "^6.4.2",
         "nodemailer-mailgun-transport": "^2.0.0",
-        "passport": "^0.4.0",
+        "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.9.0",
@@ -61,7 +61,8 @@
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.86.0"
+        "semantic-ui-react": "^0.86.0",
+        "session-file-store": "^1.4.0"
     },
     "devDependencies": {
         "babel-eslint": "^10.0.1",
