--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "newrelic": "^6.6.0",
         "next": "^8.0.3",
         "next-authentication": "^0.1.1",
+        "next-images": "^1.4.0",
         "next-page-transitions": "^1.0.0-beta.2",
         "next-redux-wrapper": "^3.0.0",
         "next-server": "^9.0.5",
