--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "babel-plugin-transform-class-properties": "^6.24.1",
         "bcrypt": "^3.0.8",
         "body-parser": "^1.18.3",
+        "cloudinary": "^1.22.0",
+        "cloudinary-core": "^2.8.2",
+        "cloudinary-react": "^1.5.0",
         "compression": "^1.7.4",
         "connect-mongo": "^2.0.3",
         "cookie-parser": "^1.4.4",
@@ -27,6 +30,8 @@
         "helmet": "^3.22.0",
         "http-proxy-middleware": "^1.0.3",
         "http-status-codes": "^1.3.2",
+        "imagemin-mozjpeg": "^9.0.0",
+        "imagemin-optipng": "^8.0.0",
         "indicative": "^7.4.4",
         "leaflet": "^1.6.0",
         "leaflet.locatecontrol": "^0.72.0",
@@ -37,9 +42,10 @@
         "multer": "^1.4.2",
         "multiparty": "^4.2.1",
         "newrelic": "^6.6.0",
-        "next": "^8.0.3",
+        "next": "^9.4.4",
         "next-authentication": "^0.1.1",
         "next-images": "^1.4.0",
+        "next-optimized-images": "^2.6.1",
         "next-page-transitions": "^1.0.0-beta.2",
         "next-redux-wrapper": "^3.0.0",
         "next-server": "^9.0.5",
