--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dependencies": {
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
-        "axios": "^0.19.0",
+        "axios": "^0.19.2",
+        "axios-hooks": "^2.0.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "bcrypt": "^3.0.8",
         "body-parser": "^1.18.3",
