--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "leaflet": "^1.6.0",
         "leaflet-control-geocoder": "^1.13.0",
         "leaflet-geosearch": "^3.0.6",
+        "leaflet-routing-machine": "^3.2.12",
         "leaflet.awesome-markers": "^2.0.5",
         "leaflet.locatecontrol": "^0.72.0",
         "mapbox-gl": "^1.10.0",
