fixed mailgun issue

--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
         "imagemin-mozjpeg": "^9.0.0",
         "imagemin-optipng": "^8.0.0",
         "indicative": "^7.4.4",
-        "leaflet": "^1.6.0",
+        "leaflet": "^1.7.1",
         "leaflet-control-geocoder": "^1.13.0",
         "leaflet-geosearch": "^3.0.6",
         "leaflet-routing-machine": "^3.2.12",
         "leaflet.awesome-markers": "^2.0.5",
         "leaflet.locatecontrol": "^0.72.0",
+        "mailgun-js": "^0.22.0",
         "mapbox-gl": "^1.10.0",
         "mapbox-gl-leaflet": "0.0.12",
         "mongoose": "^5.7.5",
@@ -61,8 +62,8 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "react-leaflet": "^2.7.0",
         "react-native-listener": "^1.1.0",
         "react-redux": "^5.0.6",
