--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-leaflet": "^2.7.0",
+        "react-leaflet-search": "^2.0.1",
         "react-native-listener": "^1.1.0",
         "react-redux": "^5.0.6",
         "react-router": "^5.1.2",
