--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "dom": "0.0.3",
         "dotenv": "^8.0.0",
         "email-validator": "^2.0.4",
+        "esri-leaflet-geocoder": "^2.3.3",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
         "express-validator": "^6.5.0",
@@ -65,6 +66,7 @@
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-leaflet": "^2.7.0",
+        "react-leaflet-control": "^2.1.2",
         "react-leaflet-search": "^2.0.1",
         "react-native-listener": "^1.1.0",
         "react-redux": "^5.0.6",
