--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
         "dev": "NODE_ENV=development nodemon server/index.js",
         "build": "next build",
         "start": "next start -p $PORT",
-        "postbuild": "next-on-netlify",
         "heroku-postbuild": "npm run build"
     },
     "dependencies": {
@@ -51,7 +50,7 @@
         "newrelic": "^6.6.0",
         "next": "^9.3.2",
         "next-images": "^1.4.0",
-        "next-on-netlify": "^2.5.1",
+        "next-offline": "^5.0.3",
         "next-optimized-images": "^2.6.1",
         "next-page-transitions": "^1.0.0-beta.2",
         "next-redux-wrapper": "^3.0.0",
