--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
         "axios": "^0.19.2",
-        "axios-hooks": "^2.0.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "bcrypt": "^3.0.8",
         "body-parser": "^1.18.3",
@@ -21,7 +20,6 @@
         "connect-mongo": "^2.0.3",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
-        "dom": "0.0.3",
         "dotenv": "^8.0.0",
         "email-validator": "^2.0.4",
         "esri-leaflet-geocoder": "^2.3.3",
@@ -30,7 +28,6 @@
         "express-validator": "^6.5.0",
         "font-awesome": "^4.7.0",
         "helmet": "^3.22.0",
-        "http-proxy-middleware": "^1.0.3",
         "http-status-codes": "^1.3.2",
         "imagemin-mozjpeg": "^9.0.0",
         "imagemin-optipng": "^8.0.0",
@@ -45,19 +42,12 @@
         "mapbox-gl-leaflet": "0.0.12",
         "mongoose": "^5.7.5",
         "morgan": "^1.9.1",
-        "multer": "^1.4.2",
-        "multiparty": "^4.2.1",
-        "newrelic": "^6.6.0",
         "next": "^9.3.2",
         "next-images": "^1.4.0",
-        "next-offline": "^5.0.3",
         "next-optimized-images": "^2.6.1",
-        "next-page-transitions": "^1.0.0-beta.2",
         "next-redux-wrapper": "^3.0.0",
         "next-server": "^9.0.5",
         "node-sass": "^4.14.1",
-        "nodemailer": "^6.4.2",
-        "nodemailer-mailgun-transport": "^2.0.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "prop-types": "^15.7.2",
@@ -77,8 +67,7 @@
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.86.0",
-        "session-file-store": "^1.4.0"
+        "semantic-ui-react": "^0.86.0"
     },
     "devDependencies": {
         "babel-eslint": "^10.0.1",
