--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "express": "^4.16.4",
         "express-session": "^1.15.6",
         "express-validator": "^6.5.0",
+        "flatted": "^3.1.0",
         "font-awesome": "^4.7.0",
         "helmet": "^3.22.0",
         "http-status-codes": "^1.3.2",
