--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
+        "awesome-debounce-promise": "^2.1.0",
         "axios": "^0.19.2",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "bcrypt": "^3.0.8",
@@ -38,8 +39,9 @@
         "leaflet-routing-machine": "^3.2.12",
         "leaflet.awesome-markers": "^2.0.5",
         "leaflet.locatecontrol": "^0.72.0",
+        "lodash": "^4.17.20",
         "mailgun-js": "^0.22.0",
-        "mapbox-gl": "^1.10.0",
+        "mapbox-gl": "^1.13.0",
         "mapbox-gl-leaflet": "0.0.12",
         "mongoose": "^5.7.5",
         "morgan": "^1.9.1",
