--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
         "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
     },
     "dependencies": {
+        "@sentry/react": "^6.2.0",
+        "@sentry/tracing": "^6.2.0",
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
         "axios": "^0.19.2",
+        "babel-plugin-add-react-displayname": "0.0.5",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "bcrypt": "^3.0.8",
         "body-parser": "^1.18.3",
@@ -38,6 +41,7 @@
         "leaflet.locatecontrol": "^0.72.0",
         "lodash": "^4.17.20",
         "logrocket": "^1.0.14",
+        "logrocket-react": "^4.0.1",
         "mailgun-js": "^0.22.0",
         "mongoose": "^5.7.5",
         "morgan": "^1.10.0",
