--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "dev": "NODE_ENV=development nodemon server/index.js",
         "build": "next build",
-        "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
+        "start": "next start -p 5150"
     },
     "dependencies": {
         "@zeit/next-css": "^1.0.1",
@@ -54,6 +54,7 @@
         "react-leaflet": "^2.7.0",
         "react-leaflet-control": "^2.1.2",
         "react-leaflet-search": "^2.0.1",
+        "react-leaflet-universal": "^2.2.1",
         "react-redux": "^5.0.6",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
@@ -84,5 +85,8 @@
         "style-loader": "^0.23.1",
         "url-loader": "^1.1.2",
         "webpack": "^4.29.6"
+    },
+    "engines": {
+        "node": "14.3.0"
     }
 }
