--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.86.0"
+        "semantic-ui-react": "^0.86.0",
+        "webpack": "^4.29.6"
     },
     "devDependencies": {
         "babel-eslint": "^10.0.1",
@@ -83,8 +84,7 @@
         "nodemon": "^1.19.1",
         "prettier": "^1.16.4",
         "style-loader": "^0.23.1",
-        "url-loader": "^1.1.2",
-        "webpack": "^4.29.6"
+        "url-loader": "^1.1.2"
     },
     "engines": {
         "node": "14.3.0"
