fixed public folder problem with map icons; had to revert to public/static, made custom 404.js page and fixed server.js issue with private routes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
         "start": "next start -p $PORT"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-brands-svg-icons": "^5.15.4",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.15",
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-sass": "^1.0.1",
         "axios": "^0.19.2",
