updated some packages

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "cors": "^2.8.5",
         "dotenv": "^8.0.0",
         "email-validator": "^2.0.4",
+        "eslint-config-next": "^11.1.2",
         "esri-leaflet-geocoder": "^2.3.3",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
@@ -43,6 +44,7 @@
         "lodash": "^4.17.20",
         "logrocket": "^1.0.14",
         "mailgun-js": "^0.22.0",
+        "mime": "^2.5.2",
         "mongoose": "^5.7.5",
         "morgan": "^1.10.0",
         "next": "^11.0.1",
@@ -53,6 +55,7 @@
         "node-sass": "^4.14.1",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "postcss": "^8.3.6",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-leaflet": "^2.7.0",
