--- a/package.json
+++ b/package.json
@@ -1,17 +1,45 @@
 {
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev -p 8016",
         "build": "next build",
         "start": "next start"
     },
     "dependencies": {
+        "@hapi/iron": "6.0.0",
+        "axios": "^0.21.4",
+        "bcrypt": "^5.0.1",
+        "cloudinary": "^1.27.0",
+        "cloudinary-react": "^1.7.0",
+        "connect-mongo": "^4.6.0",
+        "cookie": "0.4.0",
+        "cookie-parser": "^1.4.5",
+        "crypto": "^1.0.1",
         "daisyui": "^1.14.0",
+        "dotenv": "^10.0.0",
+        "email-validator": "^2.0.4",
+        "esri-leaflet-geocoder": "^3.1.1",
+        "express-validator": "^6.12.1",
+        "indicative": "^7.4.4",
+        "leaflet": "^1.7.1",
+        "leaflet-routing-machine": "^3.2.12",
+        "mailgun-js": "^0.22.0",
+        "mongoose": "^6.0.7",
+        "morgan": "^1.10.0",
         "next": "latest",
+        "next-connect": "^0.10.2",
+        "next-cookie": "^2.7.0",
+        "next-cookies": "^2.0.3",
+        "next-session": "^3.4.3",
+        "nextjs-cors": "^2.0.0",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "sass": "^1.41.1",
-        "tailwindcss": "^2.2.4"
+        "swr": "^0.1.18",
+        "tailwindcss": "^2.2.4",
+        "uuidv4": "6.2.5"
     },
     "devDependencies": {
         "autoprefixer": "^10.2.6",
