--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^10.0.0",
         "email-validator": "^2.0.4",
         "esri-leaflet-geocoder": "^3.1.1",
+        "express-session": "^1.17.2",
         "express-validator": "^6.12.1",
         "indicative": "^7.4.4",
         "leaflet": "^1.7.1",
@@ -39,7 +40,8 @@
         "sass": "^1.41.1",
         "swr": "^0.1.18",
         "tailwindcss": "^2.2.4",
-        "uuidv4": "6.2.5"
+        "uuidv4": "6.2.5",
+        "vm-browserify": "^1.1.2"
     },
     "devDependencies": {
         "autoprefixer": "^10.2.6",
