--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "scripts": {
         "dev": "NODE_ENV=development next dev -p 8016",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "find:unused": "next-unused"
     },
     "dependencies": {
+        "@fullhuman/postcss-purgecss": "github:fullhuman/postcss-purgecss",
         "@hapi/iron": "6.0.0",
         "axios": "^0.21.4",
         "bcrypt": "^5.0.1",
@@ -35,16 +37,32 @@
         "nextjs-cors": "^2.0.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "postcss-flexbugs-fixes": "^5.0.2",
+        "postcss-preset-env": "^6.7.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "sass": "^1.41.1",
         "swr": "^0.1.18",
         "tailwindcss": "^2.2.4",
+        "terser-webpack-plugin": "^5.2.4",
         "uuidv4": "6.2.5",
         "vm-browserify": "^1.1.2"
     },
     "devDependencies": {
         "autoprefixer": "^10.2.6",
+        "next-unused": "0.0.6",
         "postcss": "^8.3.5"
+    },
+    "next-unused": {
+        "alias": {},
+        "include": [
+            "components",
+            "pages",
+            "lib",
+            "middleware",
+            "utils"
+        ],
+        "exclude": [],
+        "entrypoints": []
     }
 }
