--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "NODE_ENV=development next dev -p 8016",
-        "build": "next build",
+        "build": "NODE_ENV=production next build",
         "start": "next start",
         "find:unused": "next-unused"
     },
