--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "NODE_ENV=development next dev -p 8016",
+        "dev": "NODE_ENV=development NODE_OPTIONS='--inspect' next dev -p 8016",
+
         "build": "NODE_ENV=production next build",
         "start": "next start",
         "find:unused": "next-unused"
