--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "connect-mongo": "^4.6.0",
         "cookie": "0.4.0",
         "cookie-parser": "^1.4.5",
+        "critters": "0.0.10",
         "crypto": "^1.0.1",
         "daisyui": "^1.14.0",
         "dotenv": "^10.0.0",
