--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "dev": "NODE_ENV=development NODE_OPTIONS='--inspect' next dev -p 8016",
+        "dev": "NODE_ENV=development next dev",
         "build": "NODE_ENV=production next build",
         "start": "next start",
         "find:unused": "next-unused"
@@ -28,7 +28,7 @@
         "leaflet": "^1.7.1",
         "leaflet-routing-machine": "^3.2.12",
         "mailgun-js": "^0.22.0",
-        "mongoose": "^6.0.7",
+        "mongoose": "^6.0.11",
         "morgan": "^1.10.0",
         "next": "latest",
         "next-connect": "^0.10.2",
@@ -51,7 +51,11 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.2.6",
+        "aws-sdk": "^2.1010.0",
+        "html-loader": "^2.1.2",
+        "mock-aws-s3": "^4.0.2",
         "next-unused": "0.0.6",
+        "nock": "^13.1.3",
         "postcss": "^8.3.5"
     },
     "next-unused": {
