--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
         "esri-leaflet-geocoder": "^3.1.1",
         "express-session": "^1.17.2",
         "express-validator": "^6.12.1",
+        "form-data": "^4.0.0",
         "indicative": "^7.4.4",
         "leaflet": "^1.7.1",
         "leaflet-routing-machine": "^3.2.12",
         "mailgun-js": "^0.22.0",
+        "mailgun.js": "^3.6.1",
         "mongoose": "^6.0.11",
         "morgan": "^1.10.0",
         "next": "latest",
