--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "mongoose": "^6.0.11",
         "morgan": "^1.10.0",
         "next": "latest",
+        "next-auth": "^3.29.0",
         "next-connect": "^0.10.2",
         "next-cookie": "^2.7.0",
         "next-cookies": "^2.0.3",
