--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
         "dev": "NODE_ENV=development NODE_OPTIONS='--inspect' next dev -p 8016",
         "build": "NODE_ENV=production next build",
         "start": "next start",
-        "find:unused": "next-unused"
+        "find:unused": "next-unused",
+        "lint": "eslint ./ --ext js,jsx"
     },
     "dependencies": {
         "@fullhuman/postcss-purgecss": "github:fullhuman/postcss-purgecss",
@@ -58,6 +59,14 @@
     "devDependencies": {
         "autoprefixer": "^10.2.6",
         "aws-sdk": "^2.1010.0",
+        "eslint": "^7.32.0",
+        "eslint-config-next": "^12.0.8",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-promise": "^5.2.0",
+        "eslint-plugin-react": "^7.28.0",
         "html-loader": "^2.1.2",
         "mock-aws-s3": "^4.0.2",
         "next-unused": "0.0.6",
