--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
         "build": "NODE_ENV=production next build",
         "start": "node_modules/next/dist/bin/next start -p $PORT",
         "find:unused": "next-unused",
-        "lint": "eslint ./ --ext js,jsx"
+        "lint": "next lint",
+        "eslint": "eslint \"**/*.+(js|jsx|ts|tsx)\"",
+        "eslint:fix": "eslint --fix \"**/*.+(js|jsx|ts|tsx)\"",
+        "prettier": "prettier --check \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
+        "prettier:fix": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\""
     },
     "dependencies": {
         "@fullhuman/postcss-purgecss": "github:fullhuman/postcss-purgecss",
@@ -59,14 +63,14 @@
     "devDependencies": {
         "autoprefixer": "^10.2.6",
         "aws-sdk": "^2.1010.0",
-        "eslint": "^7.32.0",
-        "eslint-config-next": "^12.0.8",
-        "eslint-config-standard": "^16.0.3",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-node": "^11.1.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-next": "11.1.2",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-promise": "^5.2.0",
-        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react": "^7.25.1",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "html-loader": "^2.1.2",
         "mock-aws-s3": "^4.0.2",
         "next-unused": "0.0.6",
