--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "passport-local": "^1.0.0",
         "postcss-flexbugs-fixes": "^5.0.2",
         "postcss-preset-env": "^6.7.0",
+        "process": "^0.11.10",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "sass": "^1.41.1",
