--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "@hapi/iron": "6.0.0",
         "axios": "^0.21.4",
         "bcrypt": "^5.0.1",
-        "cloudinary": "^1.27.0",
-        "cloudinary-react": "^1.7.0",
+        "cloudinary": "^1.29.0",
+        "cloudinary-react": "^1.7.2",
         "connect-mongo": "^4.6.0",
         "cookie": "0.4.0",
         "cookie-parser": "^1.4.5",
@@ -22,7 +22,7 @@
         "daisyui": "^1.14.0",
         "dotenv": "^10.0.0",
         "email-validator": "^2.0.4",
-        "esri-leaflet-geocoder": "^3.1.1",
+        "esri-leaflet-geocoder": "^3.1.2",
         "express-session": "^1.17.2",
         "express-validator": "^6.12.1",
         "form-data": "^4.0.0",
@@ -31,47 +31,47 @@
         "leaflet-routing-machine": "^3.2.12",
         "mailgun-js": "^0.22.0",
         "mailgun.js": "^3.6.1",
-        "moment": "^2.29.1",
-        "mongoose": "^6.0.11",
+        "moment": "^2.29.2",
+        "mongoose": "^6.2.10",
         "morgan": "^1.10.0",
-        "next": "latest",
-        "next-auth": "^3.29.0",
+        "next": "^12.1.4",
+        "next-auth": "^3.29.1",
         "next-connect": "^0.10.2",
         "next-cookie": "^2.7.0",
         "next-cookies": "^2.0.3",
         "next-session": "^3.4.3",
-        "nextjs-cors": "^2.0.0",
+        "nextjs-cors": "^2.1.1",
         "nextjs-progressbar": "0.0.13",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "postcss-flexbugs-fixes": "^5.0.2",
-        "postcss-preset-env": "^6.7.0",
+        "postcss-preset-env": "^6.7.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "sass": "^1.41.1",
+        "sass": "^1.49.11",
         "swr": "^0.1.18",
         "tailwindcss": "^2.2.4",
-        "terser-webpack-plugin": "^5.2.4",
+        "terser-webpack-plugin": "^5.3.1",
         "uuid": "^8.3.2",
         "uuidv4": "6.2.5",
         "vm-browserify": "^1.1.2"
     },
     "devDependencies": {
-        "autoprefixer": "^10.2.6",
-        "aws-sdk": "^2.1010.0",
+        "autoprefixer": "^10.4.4",
+        "aws-sdk": "^2.1109.0",
         "eslint": "^7.32.0",
-        "eslint-config-next": "^12.0.8",
+        "eslint-config-next": "^12.1.4",
         "eslint-config-standard": "^16.0.3",
-        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-promise": "^5.2.0",
-        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react": "^7.29.4",
         "html-loader": "^2.1.2",
         "mock-aws-s3": "^4.0.2",
         "next-unused": "0.0.6",
-        "nock": "^13.1.3",
-        "postcss": "^8.3.5"
+        "nock": "^13.2.4",
+        "postcss": "^8.4.12"
     },
     "next-unused": {
         "alias": {},
