add map components

--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
         "daisyui": "^1.14.0",
         "dotenv": "^10.0.0",
         "email-validator": "^2.0.4",
+        "esri-leaflet": "^3.0.8",
         "esri-leaflet-geocoder": "^3.1.2",
         "express-session": "^1.17.2",
         "express-validator": "^6.12.1",
         "form-data": "^4.0.0",
         "indicative": "^7.4.4",
         "leaflet": "^1.7.1",
+        "leaflet-geosearch": "^3.6.0",
         "leaflet-routing-machine": "^3.2.12",
+        "leaflet.locatecontrol": "^0.76.0",
         "lodash.isequal": "^4.5.0",
         "mailgun-js": "^0.22.0",
         "mailgun.js": "^3.6.1",
+        "mapbox-gl": "^2.8.2",
         "moment": "^2.29.2",
         "mongoose": "^6.2.10",
         "morgan": "^1.10.0",
@@ -54,6 +58,9 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
+        "react-leaflet": "3.1.0",
+        "react-leaflet-locate-control": "^0.1.6",
+        "react-mapbox-gl": "^5.1.1",
         "react-typeahead": "^2.0.0-alpha.8",
         "sass": "^1.49.11",
         "swr": "^0.1.18",
